--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,20 @@
 
     <string name="swOn">Switched on</string>
     <string name="tvRatio">Refreshment Ratio</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    //String para bar de fragments
+
+    <string name="hygrometer">hygrometer</string>
+    <string name="photometer">photometer</string>
+    <string name="thermometer">thermometer</string>
+    <string name="barometer">barometer</string>
+
+
+
+    <string name="logOut">Log Out</string>
 
 
 </resources>
